<resources>
    <string name="app_name">MedApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="doctor">Doctor</string>
    <string name="login">Join us</string>
    <string name="register" >Register</string>

    <string name="home_second">Home Second</string>
    <string name="username">userName</string>
    <string name="useremail">userEmail</string>
</resources>
