<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_diagnosis"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/diagnosis" />
        <item
            android:id="@+id/nav_doctor"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/doctor" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/register" />
    </group>
</menu>
