<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.medapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.medapp.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_diagnosis"
        android:name="com.example.medapp.ui.gallery.Diagnosis"
        android:label="@string/diagnosis"
        tools:layout="@layout/diagnosis" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.medapp.ui.Login"
        android:label="@string/login"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.medapp.ui.Register"
        android:label="@string/register"
        tools:layout="@layout/activity_register" />

    <fragment
        android:id="@+id/nav_doctor"
        android:name="com.example.medapp.ui.slideshow.SlideshowDoctor"
        android:label="@string/doctor"
        tools:layout="@layout/fragment_doctor" />
</navigation>